# navit

./: .gitignore  ReadMe_DevHelp.txt  ReadMe_Jan2015.txt  ReadMe_NavitQt5.txt  ReadMe_install_nxe.txt  build.txt  flash.sh  gbs-navit.conf  install.sh  navit_qt5_build.txt  navit_qt5_install.txt  navit_qt5_setup.txt  portland.nme  release.sh
Navigation/NXE/: .ycm_extra_conf.py  CMakeLists.txt  api_description.txt  nxe.conf  org.nxe.MapDownloader.service  org.nxe.NavIt.xml  org.nxe.mapdownloader.service  org.nxe.navit.desktop  osm_maps.xml
Navigation/NXE/cmake/modules/: FindDBusCpp.cmake  FindGPSD.cmake  Finddbus-cxx.cmake
Navigation/NXE/exampleapp/: app.xpk  make_xpk.sh
Navigation/NXE/exampleapp/app/: index.html  manifest.json
Navigation/NXE/js/: nxe_api.js
Navigation/NXE/src/: CMakeLists.txt  calls.h  context.h  dbus_helpers.hpp  gpsdprovider.cc  gpsdprovider.h  igpsprovider.h  inavitipc.h  inavitprocess.h  jsonmessage.cc  jsonmessage.h  log.cc  log.h  navitcontroller.cc  navitcontroller.h  navitdbus.cc  navitdbus.h  navitipc.h  navitprocess.cc  navitprocess.h  navitprocessimpl.cc  navitprocessimpl.h  nxe_extension.cc  nxe_extension.h  nxe_instance.cc  nxe_instance.h  position.h  settings.cc  settings.h  settingtags.h
Navigation/NXE/src/app/: CMakeLists.txt  alog.h  app-main.cc  appsettings.cc  appsettings.h  locationproxy.cc  locationproxy.h  main.cc  mapinfoproxy.cc  mapinfoproxy.h  navititem.cc  navititem.h  navitmapsproxy.cc  navitmapsproxy.h  navitnavigationproxy.cc  navitnavigationproxy.h  navitquickproxy.cc  navitquickproxy.h  navitsubcompositor.cc  navitsubcompositor.h  qml.qrc  qml.res
Navigation/NXE/src/app/qml/: CompositorMainView.qml  MainView.qml  WindowChrome.qml  WindowContainer.qml  compositor.js
Navigation/NXE/src/app/qml/nxe-ui/: CLAllMaps.qml  CLDialog.qml  CLExpandableDelegate.qml  CLExpandedDelegate.qml  CLListDelegate.qml  CLSuggestedCountriesModel.qml  CancelButton.qml  CountryLanguage.qml  DownloadCancelConfirmationDialog.qml  DownloadCompleted.qml  DownloadMaps.qml  FTUCancelPrompt.qml  FTUDialogPage.qml  FTUMainPage.qml  FactoryResetDialog.qml  FactoryResetProgressDialog.qml  LocationsFavorites.qml  LocationsHistory.qml  LocationsListDelegate.qml  LocationsListModel.qml  LocationsListView.qml  LocationsResult.qml  LocationsResultDelegate.qml  LocationsResultModel.qml  LocationsSearch.qml  LocationsSearchInputItem.qml  LocationsStructuredSearch.qml  LocationsStructuredSearchSelected.qml  LocationsView.qml  MainPage.qml  ManagePOIs.qml  MapLocationInfo.qml  MapLocationInfoTop.qml  MapLocationToast.qml  MenuHeaderButton.qml  NButton.qml  NDialog.qml  NDropShadow.qml  NMenu.qml  NText.qml  (+17 more)
Navigation/NXE/src/app/qml/nxe-ui/common/: BackButton.qml  CancelButton.qml  NButton.qml  NDialog.qml  Page.qml
Navigation/NXE/src/app/qml/nxe-ui/dummydata/: addressSearchResult.qml  africaModel.qml  allMapsModel.qml  asiaModel.qml  citySearchModel.qml  citySearchResult.qml  countrySearchModel.qml  countrySearchResult.qml  europeModel.qml  locationFavoritesResult.qml  locationHistoryResult.qml  locationSearchResult.qml  navigationManuversModel.qml  navigationProxy.qml  navitMapsProxy.qml  navitProxy.qml  streetSearchResult.qml
Navigation/NXE/src/app/qml/nxe-ui/factoryresetview/: FactoryResetDialog.qml  FactoryResetProgressDialog.qml
Navigation/NXE/src/app/qml/nxe-ui/ftuview/: FTUCancelPrompt.qml  FTUDialogPage.qml
Navigation/NXE/src/app/qml/nxe-ui/mdview/: CLDialog.qml  CLExpandableDelegate.qml  CLExpandedDelegate.qml  CLListDelegate.qml  CLSuggestedCountriesModel.qml  CountryLanguage.qml  DownloadCancelConfirmationDialog.qml  DownloadCompleted.qml  DownloadMaps.qml
Navigation/NXE/src/app/qml/nxe-ui/navigationview/: NavigationImages.js  NavigationInfo.qml  NavigationInfoExtraInfo.qml  NavigationInfoListView.qml  WaypointItem.qml
Navigation/NXE/src/app/qml/nxe-ui/searchview/: LocationsFavHist.qml  LocationsListModel.qml  LocationsListView.qml  LocationsResult.qml  LocationsResultDelegate.qml  LocationsSearch.qml  LocationsSearchInputItem.qml  LocationsStructuredSearch.qml  LocationsStructuredSearchSelected.qml  LocationsView.qml
Navigation/NXE/src/app/qml/nxe-ui/settingsview/: ManagePOIs.qml  SettingsListDelegate.qml  SettingsListModel.qml  SettingsView.qml  (+1 more)
Navigation/NXE/src/mapdownloader/: CMakeLists.txt  mapdesc.cc  mapdesc.h  mapdownloader.cc  mapdownloader.h  mapdownloader.service.xml  mapdownloader_main.cc  mapdownloaderdbusserver.cc  mapdownloaderdbusserver.h  mdlog.h  org.nxe.mapdownloader.service
Navigation/NXE/src/nxe/: CMakeLists.txt  calls.h  concurrent_queue.hpp  context.h  dbus_helpers.hpp  dbuscontroller.cc  dbuscontroller.h  gpsdprovider.cc  gpsdprovider.h  igpsprovider.h  imapdownloader.h  inavitipc.h  inavitprocess.h  ispeech.h  jsonmessage.cc  jsonmessage.h  log.cc  log.h  mapdownloaderdbus.cc  mapdownloaderdbus.h  navitcontroller.cc  navitcontroller.h  navitdbus.cc  navitdbus.h  navitprocess.cc  navitprocessimpl.cc  navitprocessimpl.h  nxe_extension.cc  nxe_extension.h  nxe_instance.cc  nxe_instance.h  nxe_version.cc.in  nxe_version.h  position.h  settings.cc  settings.h  settingtags.h  speechimpl.h  speechimpl_null.cc  speechimpl_tizen.cc  (+2 more)
Navigation/NXE/tec/common/: extension.cc  extension.h
Navigation/NXE/tests/: CMakeLists.txt  testmain.cc  testutils.cc  testutils.h
Navigation/NXE/tests/benchmarks/: CMakeLists.txt  benchmark_main.cc  message_handling_benchmark.cc  render_benchmark.cc  speechtizen.cc  speechtizen.h
Navigation/NXE/tests/functional/: CMakeLists.txt  nxeinstance_test.cc  nxemultithreading_test.cc  nxerouting_test.cc
Navigation/NXE/tests/mocks/: gpsmock.h  mapdownloadermock.h  navitcontrollermock.h  navitprocessmock.h  speechmock.h
Navigation/NXE/tests/tizen-tests/: CMakeLists.txt  main.cc  nxe-tizen-test-main.cc
Navigation/NXE/tests/unit/: CMakeLists.txt  gpsd_test.cc  jsonparser_test.cc  mapdownloader_test.cc  navitdbus_test.cc  navitinstance_test.cc  navitprocess_test.cc  testmain.cc  testutils.cc  testutils.h
Navigation/NXE/tests/unit/mocks/: navitcontrollermock.h  navitprocessmock.h
(+109 files in other folders)
